--- a/apps/docs/src/content/docs/changelog.mdx
+++ b/apps/docs/src/content/docs/changelog.mdx
@@ -1,7 +1,14 @@
 ---
-title: Release Notes
-description: Notable changes and improvements by version.
+title: Changelog
+description: List of changes and improvements by version.
 ---
+
+## v0.0.3.1 2025-11-25
+
+### Bug Fixes
+
+- Fixed support negative numbers in expressions.
+- Added unary minus operator support for negative numbers.
 
 ## v0.0.3 — Arrays in Objects & Real-World Examples (2025-11-25)
 
