--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -62,6 +62,10 @@ Perfect for:
   <Card title="Fun Error Messages" icon="wand">
     Wizards, gremlins and goblins guide you when something breaks.
   </Card>
+
+  <Card title="Changelog" icon="wand">
+    Wizards, gremlins and goblins guide you when something breaks.
+  </Card>
 </CardGrid>
 
 ## Ready to begin?
