--- a/apps/docs/src/content/docs/index.mdx
+++ b/apps/docs/src/content/docs/index.mdx
@@ -64,7 +64,7 @@ Perfect for:
   </Card>
 
   <Card title="Changelog" icon="wand">
-    Wizards, gremlins and goblins guide you when something breaks.
+    View the changelog for more information.
   </Card>
 </CardGrid>
 
